# swr

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/workflows/: cmake.yml
include/swr/: limits.h  shaders.h  stats.h  swr.h
scripts/: build.sh  clean-build.sh  clean-deps.sh  pre-build.sh
src/bench/: CMakeLists.txt  occlusion_grid_main.cpp
src/bench/clip/: main.cpp  shader.h
src/bench/gears_clip/: main.cpp  shader.h
src/bench/memset/: main.cpp
src/bench/occlusion/: main.cpp  shader.h
src/common/: colors.h  cube.geom  cube_uniform_uv.geom  memset.h  plane.geom  utils.h
src/common/platform/: cpu.cpp  log.cpp  platform.cpp  platform.h
src/common/simd_sse/: memset.h
src/demos/: CMakeLists.txt
src/demos/alpha_blend/: main.cpp  shader.h
src/demos/bitmap_font/: font.cpp  font.h  main.cpp  shader.h
src/demos/blinn_phong/: main.cpp  shader.h
src/demos/cars/: CMakeLists.txt  main.cpp  shader.h
src/demos/cars/assets/cars/cop/: Cop_BackWheels.mtl  Cop_Body.mtl  asset.json
src/demos/clear/: main.cpp
src/demos/color/: main.cpp  shader.h
src/demos/common/: font.cpp  font.h  mesh.cpp  mesh.h  stb.cpp  texture.h
src/demos/emitter/: main.cpp  particles.h  shader.h
src/demos/fill_test/: main.cpp  shader.h
src/demos/framebuffer_cube/: main.cpp  shader.h
src/demos/gears/: main.cpp  shader.h
src/demos/gears_depth/: main.cpp  shader.h
src/demos/motion_blur/: main.cpp  particles.h  shader.h
src/demos/normal_map/: main.cpp  shader.h
src/demos/obj_viewer/: main.cpp  shader.h
src/demos/phong/: main.cpp  shader.h
src/demos/scissor/: main.cpp  shader.h
src/demos/shadow_cube/: main.cpp  shader.h
src/demos/testing/: font.cpp  font.h  main.cpp  statistics.h
src/demos/testing/common/shaders/: color.h  front_face_test.h  phong.h  tex_coords.h  texture.h
src/demos/textures/: main.cpp  shader.h
src/demos/timings/: font.h  main.cpp  shader.h
src/demos/triangle/: main.cpp  shader.h
src/swr_app/: CMakeLists.txt  framework.cpp  framework.h  main.cpp
src/test/: CMakeLists.txt  slot_map.cpp
textures/crate1/: NOTICE
textures/fonts/: NOTICE
textures/stone/: NOTICE
