set(COMMON_SOURCES
    ${SWR_SOURCE_DIR}/src/common/platform/cpu.cpp
    ${SWR_SOURCE_DIR}/src/common/platform/log.cpp
    ${SWR_SOURCE_DIR}/src/common/platform/platform.cpp
)

add_executable(demo_alpha_blend
    ${COMMON_SOURCES}
    common/stb.cpp
    alpha_blend/main.cpp
)
target_include_directories(demo_alpha_blend
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_alpha_blend
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_bitmap_font
    ${COMMON_SOURCES}
    common/font.cpp
    common/stb.cpp
    bitmap_font/main.cpp
)
target_include_directories(demo_bitmap_font
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_bitmap_font
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_blinn_phong
    ${COMMON_SOURCES}
    common/stb.cpp
    blinn_phong/main.cpp
)
target_include_directories(demo_blinn_phong
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_blinn_phong
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_clear
    ${COMMON_SOURCES}
    clear/main.cpp
)
target_include_directories(demo_clear
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_clear
    PRIVATE
    cpu_features
    swrast
    swr_app
    swr_project_options
    swr_project_warnings
)

add_executable(demo_color
    ${COMMON_SOURCES}
    color/main.cpp
)
target_include_directories(demo_color
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_color
    PRIVATE
    cpu_features
    swrast
    swr_app
    swr_project_options
    swr_project_warnings
)

add_executable(demo_emitter
    ${COMMON_SOURCES}
    common/stb.cpp
    emitter/main.cpp
)
target_include_directories(demo_emitter
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_emitter
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_fill_test
    ${COMMON_SOURCES}
    common/mesh.cpp
    fill_test/main.cpp
)
target_include_directories(demo_fill_test
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_fill_test
    PRIVATE
    cpu_features
    swrast
    swr_app
    swr_project_options
    swr_project_warnings
)

add_executable(demo_gears
    ${COMMON_SOURCES}
    gears/main.cpp
)
target_include_directories(demo_gears
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_gears
    PRIVATE
    cpu_features
    swrast
    swr_app
    swr_project_options
    swr_project_warnings
)

add_executable(demo_motion_blur
    ${COMMON_SOURCES}
    common/mesh.cpp
    common/stb.cpp
    motion_blur/main.cpp
)
target_include_directories(demo_motion_blur
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_motion_blur
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_normal_map
    ${COMMON_SOURCES}
    common/stb.cpp
    normal_map/main.cpp
)
target_include_directories(demo_normal_map
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_normal_map
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_obj_viewer
    ${COMMON_SOURCES}
    common/stb.cpp
    obj_viewer/main.cpp
)
target_include_directories(demo_obj_viewer
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_obj_viewer
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    tinyobjloader
    swr_project_options
    swr_project_warnings
)

add_executable(demo_phong
    ${COMMON_SOURCES}
    common/stb.cpp
    phong/main.cpp
)
target_include_directories(demo_phong
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_phong
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_scissor
    ${COMMON_SOURCES}
    common/stb.cpp
    scissor/main.cpp
)
target_include_directories(demo_scissor
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_scissor
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_texture
    ${COMMON_SOURCES}
    common/stb.cpp
    textures/main.cpp
)
target_include_directories(demo_texture
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_texture
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_timings
    ${COMMON_SOURCES}
    common/font.cpp
    common/stb.cpp
    timings/main.cpp
)
target_include_directories(demo_timings
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_timings
    PRIVATE
    cpu_features
    swrast
    swr_app
    stb
    swr_project_options
    swr_project_warnings
)

add_executable(demo_triangle
    ${COMMON_SOURCES}
    triangle/main.cpp
)
target_include_directories(demo_triangle
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_triangle
    PRIVATE
    cpu_features
    swrast
    swr_app
    swr_project_options
    swr_project_warnings
)


add_subdirectory(cars)
