add_library(swr_demo_common OBJECT
    ${SWR_SOURCE_DIR}/src/common/platform/cpu.cpp
    ${SWR_SOURCE_DIR}/src/common/platform/log.cpp
    ${SWR_SOURCE_DIR}/src/common/platform/platform.cpp
)

target_include_directories(swr_demo_common
    PUBLIC
    ${SWR_SOURCE_DIR}/src
)

target_link_libraries(swr_demo_common
    PUBLIC
    cpu_features
    swrast
    swr_app
    swr_project_options
    swr_project_warnings
)

add_executable(demo_alpha_blend
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    alpha_blend/main.cpp
)
target_include_directories(demo_alpha_blend
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_alpha_blend
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_bitmap_font
    $<TARGET_OBJECTS:swr_demo_common>
    common/font.cpp
    common/stb.cpp
    bitmap_font/main.cpp
)
target_include_directories(demo_bitmap_font
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_bitmap_font
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_blinn_phong
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    blinn_phong/main.cpp
)
target_include_directories(demo_blinn_phong
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_blinn_phong
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_clear
    $<TARGET_OBJECTS:swr_demo_common>
    clear/main.cpp
)
target_include_directories(demo_clear
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_clear
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_color
    $<TARGET_OBJECTS:swr_demo_common>
    color/main.cpp
)
target_include_directories(demo_color
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_color
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_emitter
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    emitter/main.cpp
)
target_include_directories(demo_emitter
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_emitter
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_fill_test
    $<TARGET_OBJECTS:swr_demo_common>
    common/mesh.cpp
    fill_test/main.cpp
)
target_include_directories(demo_fill_test
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_fill_test
    PRIVATE
    swr_demo_common
)

add_executable(demo_gears
    $<TARGET_OBJECTS:swr_demo_common>
    gears/main.cpp
)
target_include_directories(demo_gears
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_gears
    PRIVATE
    swr_demo_common
)

add_executable(demo_motion_blur
    $<TARGET_OBJECTS:swr_demo_common>
    common/mesh.cpp
    common/stb.cpp
    motion_blur/main.cpp
)
target_include_directories(demo_motion_blur
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_motion_blur
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_normal_map
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    normal_map/main.cpp
)
target_include_directories(demo_normal_map
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_normal_map
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_obj_viewer
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    obj_viewer/main.cpp
)
target_include_directories(demo_obj_viewer
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_obj_viewer
    PRIVATE
    stb
    swr_demo_common
    tinyobjloader
)

add_executable(demo_phong
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    phong/main.cpp
)
target_include_directories(demo_phong
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_phong
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_scissor
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    scissor/main.cpp
)
target_include_directories(demo_scissor
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_scissor
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_texture
    $<TARGET_OBJECTS:swr_demo_common>
    common/stb.cpp
    textures/main.cpp
)
target_include_directories(demo_texture
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_texture
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_timings
    $<TARGET_OBJECTS:swr_demo_common>
    common/font.cpp
    common/stb.cpp
    timings/main.cpp
)
target_include_directories(demo_timings
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_timings
    PRIVATE
    stb
    swr_demo_common
)

add_executable(demo_triangle
    $<TARGET_OBJECTS:swr_demo_common>
    triangle/main.cpp
)
target_include_directories(demo_triangle
    PRIVATE
    ${SWR_SOURCE_DIR}/src
)
target_link_libraries(demo_triangle
    PRIVATE
    swr_demo_common
)


add_subdirectory(cars)
